theme(styles): fixes to dark mode

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -10,3 +10,16 @@
   }
 
 }
+
+.navbar {
+  .light & {
+    @extend .navbar-light;
+    @extend .bg-white;
+  }
+
+  .dark & {
+    @extend .navbar-dark;
+    @extend .bg-dark;
+  }
+
+}
