--- a/assets/scss/components/_typography.scss
+++ b/assets/scss/components/_typography.scss
@@ -22,6 +22,7 @@ h1 {
   text-transform: uppercase;
 
   a {
+    color: var(--color);
     text-decoration: none;
   }
   @extend .display-1;
